Fixed form-field overlapping

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -10,7 +10,7 @@
 
     &__content {
         margin: auto;
-        width: 90%;
+        max-width: 90%;
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -189,7 +189,7 @@
     }
     &-img {
       max-width: 40%;
-      max-height: 450px;
+      height: auto;
       img {
         width: 100%;
         height: 100%;
