--- a/src/app/supplierDialog/lab-partner.component.scss
+++ b/src/app/supplierDialog/lab-partner.component.scss
@@ -1,22 +1,3 @@
-.form__control {
-  margin-bottom: 37px;
-
-  &-input {
-      padding: 20px;
-      width: 100%;
-      outline: none;
-      border: none;
-      border-radius: 8px;
-      border: 1px solid gray;
-      &::placeholder {
-          font-size: 15.8px;
-          font-family: 700;
-          font-family: 'poppins' sans-serif;
-      }
-  }
-}
-
-
 h2 {
   font-family: 'Lato', sans-serif;
 }
