--- a/src/app/waiting-list/waiting-list.component.scss
+++ b/src/app/waiting-list/waiting-list.component.scss
@@ -95,6 +95,7 @@
     margin-top: 30px;
     margin-left: 10rem;
     height: 100%;
+    font-size: 15px;
     h1 {
       text-align: center;
       margin-bottom: 20px;
@@ -117,23 +118,14 @@
     }
   }
 }
+
 mat-form-field{
   width: 100%;
-  height: 70px;
+  height: 90px;
 }
 
 [disabled] {
   cursor: not-allowed;
-}
-
-mat-label {
-  font-size: 15px;
-  font-weight: bold;
-  font-family: inherit;
-}
-input {
-  padding: 10px;
-  font-size: 16px;
 }
 
 .message {
